fixed card column spacing/wrapping issue

--- a/style.css
+++ b/style.css
@@ -116,11 +116,34 @@ img {
     border-radius: 25%;
 }
 
-.card-columns {
-  @include media-breakpoint-only(md) {
-    column-count: 2;
+@media (min-width: 34em) {
+  .card-columns {
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
   }
-  @include media-breakpoint-only(lg) {
-    column-count: 2;
+}
+
+@media (min-width: 48em) {
+  .card-columns {
+      -webkit-column-count: 2;
+      -moz-column-count: 2;
+      column-count: 2;
+  }
+}
+
+@media (min-width: 62em) {
+  .card-columns {
+      -webkit-column-count: 3;
+      -moz-column-count: 3;
+      column-count: 3;
+  }
+}
+
+@media (min-width: 75em) {
+  .card-columns {
+      -webkit-column-count: 3;
+      -moz-column-count: 3;
+      column-count: 3;
   }
 }
